Task5/teama/allowsamenamespace.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: team-a-allow-same-namespace
  namespace: team-a
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: team-a
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: team-a
